# mcp_langchain_agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
src/: client.py  google_search_server.py  main.py  mathserver.py  weather_server.py
src/config/: servers_connection.json
